--- a/src/style.css
+++ b/src/style.css
@@ -6,7 +6,7 @@
   --cake-icing: orange;
 }
 *{
-  box-sizing: border-box;
+
   margin: 0;
 }
 html, body {
@@ -17,20 +17,29 @@ html, body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  font-family: 'Bungee', cursive;
+  font-size: 1.5rem;
+  color: rgb(255, 42, 42);
+  text-shadow: -4px 4px var(--box-border);
 }
 body {
-  background: teal;
-  border: 5px solid lightblue;
+  background: var(--box-border);
   border-radius: 10%;
 }
-
+.container {
+  background: rgba(24,122,138,1);
+  border: 5px solid lightblue;
+  border-radius: 2rem;
+  padding: 1rem 2rem;
+}
 
 
 .konami {
-  font-size: 5rem;
-  color: yellow;
+  font-size: 3rem;
+  text-shadow: -10px 10px var(--box-border);
   transition: all 1s
 }
+
 #gift {
   margin-top: 2rem;
   position: relative;
@@ -50,8 +59,8 @@ body {
 #box::before {
   content: '';
   position: absolute;
-  top: -11%;
-  left:-19%;
+  top: -10%;
+  left:-18%;
   width: 15%;
   height: 100%;
   transform: skew(0deg, 45deg);
@@ -61,8 +70,8 @@ body {
 #box::after {
   content: '';
   position: absolute;
-  left: -11%;
-  top:-21%;
+  left: -9.5%;
+  top:-19%;
   width: 100.5%;
   height: 16%;
   transform: skew(45deg, 0deg);
@@ -72,7 +81,7 @@ body {
 }
 .stripe {
   position: relative;
-  height: 102%;
+  height: 100%;
   width: 25%;
   background: var(--box-bow);
   margin: auto;
@@ -82,8 +91,8 @@ body {
 .stripe::after {
   content: '';
   position: absolute;
-  left: -49%;
-  top:-21%;
+  left: -40%;
+  top:-20%;
   width: 100%;
   height: 16%;
   transform: skew(45deg, 0deg);
@@ -94,7 +103,7 @@ body {
 #bow {
   position: relative;
   top: -35%;
-  left: 39%;
+  left: 45%;
   width: 15%;
   height: 10%;
   background: var(--box-bow);
@@ -137,6 +146,7 @@ body {
   width: 200px;
   height: 250px;
   overflow: hidden;
+  cursor: pointer;
 }
 #bottom{
   margin: 0 auto;
@@ -244,5 +254,31 @@ body {
   background: yellow;
   z-index: 3;
   border-radius: 0 50% 50% 50%;
-  box-shadow: 20px 5px yellow, -20px 5px yellow
+  box-shadow: 20px 5px yellow, -20px 5px yellow;
+  animation: flicker ease-in-out 1s infinite;
+  transition: opacity ease-in-out 750ms;
+}
+.flicker {
+  opacity: 0;
+  transition: all .5s;
+}
+@keyframes flicker{
+  0% {transform: rotate(-2deg)}
+  50% {transform: rotate(2deg); top: 26.5%;}
+  100% {transform: rotate(-2deg)}
+}
+
+@media (max-width: 800px){
+  #desktoponly {
+    display: unset;
+    visibility: unset;
+  }
+  #message {
+    display: none;
+    visibility: none;
+  }
+  #gift {
+    display: none;
+    visibility: none;
+  }
 }
